--- a/JumyJ/codeathon1.yml
+++ b/JumyJ/codeathon1.yml
@@ -60,7 +60,14 @@ Resources:
       ServiceRole: !GetAtt CodeBuildRole.Arn
       Artifacts:
         Type: CODEPIPELINE
-
+      Buildspec:
+        version: 0.2
+        phases:
+            build:
+              commands:
+                - echo "Building the project"
+                - npm install  
+                - npm run build
   PipelineRole:
     Type: AWS::IAM::Role
     Properties:
@@ -132,13 +139,5 @@ Resources:
               OutputArtifacts:
                 - Name: BuildArtifact
               RunOrder: 1
-         phases:
-            install:
-              runtime-versions:
-                nodejs: 18  
-            build:
-              commands:
-                - echo "Building the project..."
-                - npm install  
-                - npm run build  
+         
 
